# morpho-rs

./: .gitignore  Cargo.toml  README.md  justfile  todo.md
crates/api/: Cargo.toml  README.md
crates/api/queries/: user.graphql  vault_simulation.graphql  vault_v2_simulation.graphql  vaults_v1.graphql  vaults_v2.graphql
crates/api/schema/: morpho.graphql
crates/api/src/: client.rs  error.rs  lib.rs
crates/api/src/filters/: mod.rs  query_options.rs  v1_filters.rs  v2_filters.rs
crates/api/src/queries/: mod.rs  simulation.rs  user.rs  v1.rs  v2.rs  v2_simulation.rs
crates/api/src/tx/: mod.rs  vault_v1.rs  vault_v2.rs
crates/api/src/types/: asset.rs  chain.rs  mod.rs  ordering.rs  scalars.rs  simulation.rs  user.rs  vault.rs  vault_v1.rs  vault_v2.rs
crates/api/tests/: client_user_tests.rs  client_v1_tests.rs  client_v2_tests.rs  error_handling_tests.rs  fork_helpers.rs  helpers.rs  morpho_client_fork_tests.rs  pagination_tests.rs  retry_tests.rs
crates/api/tests/fixtures/: empty_v2_vaults.json  empty_vaults.json  graphql_error.json  user_positions.json  v1_info.json  v1_info_with_markets.json  v2_info.json  v2_info_metamorpho.json  v2_info_morpho_market.json  v2_list.json  vault_not_found.json  vault_v2_not_found.json
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  main.rs
crates/cli/src/commands/: deposit.rs  mod.rs  positions.rs  vault_v1.rs  vault_v2.rs  withdraw.rs
crates/cli/src/output/: detail.rs  mod.rs  positions.rs  table.rs
crates/cli/tests/: integration.rs
crates/cli/tests/fixtures/: error_not_found.json  positions.json  positions_empty.json  v1_info.json  v1_list.json  v2_list.json
crates/cli/tests/integration/: cli_validation_tests.rs  e2e_transaction.rs  helpers.rs  positions_tests.rs  vault_v1_tests.rs  vault_v2_tests.rs
crates/contracts/: Cargo.toml  README.md
crates/contracts/src/: erc20.rs  erc4626.rs  erc4626_client.rs  error.rs  lib.rs  prepared_call.rs  provider.rs  vault_tx_client.rs  vault_v1.rs  vault_v2.rs
crates/contracts/tests/: calldata_tests.rs  e2e_fork.rs  integration.rs
crates/sim/: Cargo.toml  README.md
crates/sim/src/: error.rs  irm.rs  lib.rs  market.rs  math.rs  position.rs  vault.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs  types.rs
