[package]
name = "morpho-rs-api"
version = "0.1.3"
edition = "2021"
description = "Rust API library for querying Morpho V1 (MetaMorpho) and V2 vaults via GraphQL"
license = "MIT"
repository = "https://github.com/tynes/morpho-rs"

[dependencies]
graphql_client = { version = "0.14", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0"
url = "2.5"
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy = { version = "0.8", features = ["provider-http", "signer-local", "contract", "sol-types", "rpc-types"] }
futures = "0.3"
morpho-rs-contracts = { version = "0.1.3", path = "../contracts" }

[dev-dependencies]
wiremock = "0.6"
