[package]
name = "morpho"
version = "0.1.0"
edition = "2021"
description = "CLI tool for querying Morpho vaults"

[[bin]]
name = "morpho"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tabled = "0.17"
colored = "2.1"
anyhow = "1.0"
serde_json = "1.0"
