[package]
name = "morpho-rs-cli"
version = "0.8.0"
edition = "2021"
description = "CLI tool for querying Morpho vaults"
license = "MIT"
repository = "https://github.com/tynes/morpho-rs"

[[bin]]
name = "morpho"
path = "src/main.rs"

[dependencies]
morpho-rs-api = { version = "0.8.0", path = "../api" }
alloy-primitives = "1.0"
alloy-chains = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tabled = "0.17"
colored = "2.1"
anyhow = "1.0"
serde_json = "1.0"
