[package]
name = "contracts"
version = "0.1.0"
edition = "2021"
description = "Contract bindings and transaction clients for Morpho vaults"
license = "MIT"

[dependencies]
alloy = { version = "0.8", features = ["provider-http", "signer-local", "contract", "sol-types", "rpc-types"] }
alloy-primitives = { version = "0.8", features = ["serde"] }
url = "2.5"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
