[package]
name = "morpho-rs-contracts"
version = "0.6.0"
edition = "2021"
description = "Contract bindings and transaction clients for Morpho vaults"
license = "MIT"
repository = "https://github.com/tynes/morpho-rs"

[dependencies]
alloy = { version = "1.4", features = ["provider-http", "signer-local", "contract", "sol-types", "rpc-types"] }
alloy-primitives = { version = "1.0", features = ["serde"] }
url = "2.5"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
