[package]
name = "morpho-rs-sim"
version = "0.2.0"
edition = "2021"
description = "Simulation library for Morpho vault APY calculations"
license = "MIT"
repository = "https://github.com/tynes/morpho-rs"

[dependencies]
alloy-primitives = { version = "1.0", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
