[package]
name = "morpho-rs-strategy"
version = "0.1.0"
edition = "2021"
description = "Strategy and yield optimization types for Morpho protocol"
license = "MIT"
repository = "https://github.com/tynes/morpho-rs"

[dependencies]
alloy-primitives = { version = "1.0", features = ["serde"] }
alloy-chains = { version = "0.2", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rust_decimal_macros = "1.36"

[lints]
workspace = true
